--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ h5  {
 .container {
    display: flex;
     margin: 71.965px;
-    height: 90vh;
+  
 }
 
 .text-container {
@@ -117,6 +117,7 @@ padding-left: 75px;
     border-radius: 50%; /* Makes the mask elliptical */
     background-color: aqua;
     overflow: hidden;
+    transform: rotate(30deg); /* Rotate the oval */
 }
 
 .Think-outside {
@@ -141,11 +142,12 @@ padding-left: 75px;
 .list-1 {
     display: flex;
     list-style-type: none;
+
 }
 
 .list-container {
     margin-top: 250px;
-
+    
 }
 
 
@@ -264,7 +266,9 @@ padding-left: 75px;
 @media (max-width:600px) {
 
     .container, .container-2, .container-3, .container-4, .container-5, .container-6, .container-7, .container-8, .grid-container, .grid-container-2 {
-    display: block;
+        display: block;
+        height: auto;
+        min-height: 100%; /* Use min-height instead of vh */
     }
 
     body {
@@ -302,7 +306,6 @@ padding-left: 75px;
     .container {
         margin: 10px;
         margin-top: 30px;
-        height: 100vh;
         padding: 0px;
     }
     
@@ -319,7 +322,7 @@ padding-left: 75px;
         outline: 1px solid white;
         border-radius: 50px;
         margin-top: 15px;
-        padding: 10px;
+        padding: 15px;
         text-align: center;
     }
     
@@ -370,7 +373,6 @@ padding-left: 75px;
         margin-left: 10px;
         margin-top: 100px;
         padding: 0px 12px;
-        height: 80vh;
         padding: 0px;
     
     }
@@ -401,9 +403,8 @@ padding-left: 75px;
     .container-3 {
         margin: 0px;
         margin-left: 10px;
-        margin-top: 20px;
+        margin-top: 100px;
         padding: 0px 12px;
-        height: 90vh;
         padding: 0px;
     }
     
@@ -419,8 +420,6 @@ padding-left: 75px;
         display: flex;
         align-items: center;
         justify-content: center;
-        
-    
     }
     
     
@@ -428,7 +427,7 @@ padding-left: 75px;
     
         margin: 0px;
         margin-left: 10px;
-        margin-top: 150px;
+        margin-top: 100px;
         height: auto;
         display: flex;
         flex-wrap: wrap;
@@ -440,7 +439,7 @@ padding-left: 75px;
         display: block;
         margin: 0px;
         margin-top: 50px;
-        width: 75%;
+        width: 60%;
         gap: 50px;
     
     }
@@ -471,7 +470,7 @@ padding-left: 75px;
         display: block;
         margin: 0px;
         margin-top: 50px;
-        width: 75%;
+        width: 60%;
         gap: 50px;
     
     }
@@ -487,7 +486,6 @@ padding-left: 75px;
         display: flex;
         flex-direction: column;
         justify-content: center;
-        align-items:   ;
         margin: 0px;
         margin-left: 10px;
         margin-top: 100px;
@@ -496,13 +494,11 @@ padding-left: 75px;
      }
     
      .oval-2 {
-        padding: 0px;
-        margin-top: 0px;
-        max-height  : 100%;
-        max-width: 100%;
+        margin-top: 50px;
         border-radius: 50%; /* Makes the mask elliptical */
         background-color: aqua;
         overflow: hidden;
+        transform: rotate(30deg); /* Rotate the oval */
     }
     
     .Coding-picture {
